--- a/style.css
+++ b/style.css
@@ -393,6 +393,30 @@ textarea {
   font-family: 'Righteous', Inter, Helvetica;
 }
 
+nav ul li a {
+  position: relative;
+  transition: opacity 0.3s ease;
+}
+
+nav ul li a::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--black);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+nav ul li a:hover {
+  opacity: 0.8;
+}
+
+nav ul li a:hover::before {
+  opacity: 1;
+}
 
 
 
