--- a/style.css
+++ b/style.css
@@ -418,7 +418,13 @@ nav ul li a:hover::before {
   opacity: 1;
 }
 
+#Ciuta {
+  transition: transform 0.3s ease;
+}
 
+#Ciuta:hover {
+  transform: translateX(20px);
+}
 
 
 
