--- a/style.css
+++ b/style.css
@@ -427,10 +427,12 @@ nav ul li a:hover::before {
 }
 #Aro {
   transition: transform 0.3s ease;
+  position: relative;
+  left: 0;
 }
 
 #Aro:hover {
-  transform: translateX(-20px);
+  transform: translateX(-50%);
 }
 
 
