--- a/style.css
+++ b/style.css
@@ -425,6 +425,30 @@ nav ul li a:hover::before {
 #Ciuta:hover {
   transform: translateX(20px);
 }
+.contact-me-btn {
+  position: relative;
+  transition: opacity 0.3s ease;
+}
+
+.contact-me-btn::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--black);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.contact-me-btn:hover {
+  opacity: 0.8;
+}
+
+.contact-me-btn:hover::before {
+  opacity: 0;
+}
 
 
 
