--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ a {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  transition: background-color 0.3s ease;
 }
 strong {
   color: var(--primary);
@@ -340,7 +341,7 @@ input {
   border: none;
   cursor: pointer;
   font-family: "Righteous";
-
+  transition: background-color 0.3s ease;
 }
 #contact-me-section h2{
   color: var(--black);
